Fix: “Right Column” width is too narrow occasionally

--- a/css/content.css
+++ b/css/content.css
@@ -44,6 +44,7 @@
 
 #rightCol .fixed_elem {
     position: static !important;
+    width: auto !important;
 }
 
 #rightCol .fixed_elem + div {
